Revert "hot bug fixes for front end(add @CrossOrigin to controllers)"
This reverts commit 212ca5419230e0785ee039aa8c8d6890975aa97b.