@@ -2,11 +2,14 @@ package com.epam.team1.emotional.help.mappers;
 
 import com.epam.team1.emotional.help.dto.AnswerResponseDto;
 import com.epam.team1.emotional.help.model.Answer;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
+@RequiredArgsConstructor
 public class AnswerMapper {
 
   public AnswerResponseDto mapToResponseDto(Answer answer){
@@ -19,6 +22,6 @@ public class AnswerMapper {
     public List<AnswerResponseDto> toAnswerResponseDtoList(List<Answer> answers) {
         return answers.stream()
                 .map(this::mapToResponseDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
